tutorials/08_familiarize-with-kubernetes/solutions/edu-cluster/ingress.yaml
apiVersion: 'networking.k8s.io/v1'
kind: 'Ingress'
metadata:
  name: 'etherpad-ingress'
  annotations:
    # NOTE: enable session affinity to make websockets work for deployments with replica > 1
    nginx.ingress.kubernetes.io/affinity: 'cookie'
    nginx.ingress.kubernetes.io/session-cookie-name: 'express_sid'
spec:
  rules:
  - host: ${NAME}.lehre.ris.bht-berlin.de
    http:
      paths:
      - pathType: ImplementationSpecific
        path: '/'
        backend:
          service:
            name: etherpad-service
            port:
              number: 80
